--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, temporibus doloribus et placeat quisquam harum reprehenderit cum voluptatem non amet perspiciatis magnam nihil voluptas veritatis! Assumenda delectus sit tenetur odit!
+    
 </body>
 </html>
